--- a/templates/index.html
+++ b/templates/index.html
@@ -77,6 +77,7 @@
             <span>{{ country }}, {{ province }}, {{ city }}</span>
           </li>
         </ul>
+        <p>点击<a href="./whois">此处</a>，查看更多信息</p>
         <p>
           IP 归属地数据源:
           <a href="{{ database_href }}">{{ database_name }}</a>
@@ -133,6 +134,7 @@
             <span>{{ device }}</span>
           </li>
         </ul>
+        <p>点击<a href="./headers">此处</a>，查看更多信息</p>
         <p>用户代理: {{ user_agent }}</p>
       </section>
       <section>
@@ -217,6 +219,7 @@
             <span id="plugins">未知</span>
           </li>
         </ul>
+        <p>点击<a href="./navigator">此处</a>，查看更多信息</p>
       </section>
       <section>
         <h1>捐赠项目</h1>
