--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
     </script>
   </head>
   <body>
-    <header>考拉 IP 归属地</header>
+    <nav>{% block nav %}{% endblock %}</nav>
     <main>{% block main %}{% endblock %}</main>
     <footer>
       <p>
