--- a/templates/headers.html
+++ b/templates/headers.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %} {% load static %} {% block main %}
+{% extends "base.html" %} {% load static %} {% block nav %}
+<div><a href="../">&lt; 后退</a></div>
+<header>考拉 IP 归属地</header>
+{% endblock %}{% block main %}
 <main>
   <section id="request">
     <h1>Request</h1>
