--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %} {% load static %} {% block scripts %}
 <script src="{% static 'index.js' %}" defer></script>
+{% endblock %} {% block nav %}
+<header>考拉 IP 归属地</header>
 {% endblock %} {% block main %}
 <section>
   <h1>IP 归属地</h1>
