--- a/templates/headers.html
+++ b/templates/headers.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% load static %} {% block nav %}
 <div><a href="../">&lt; 后退</a></div>
-<header>考拉 IP 归属地</header>
+<header>查看 headers 信息</header>
 {% endblock %}{% block main %}
 <main>
   <section id="request">
