--- a/templates/whois.html
+++ b/templates/whois.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% load static %} {%block nav %}
 <div><a href="../">&lt; 后退</a></div>
-<header>考拉 IP 归属地</header>
+<header>查看 whois 信息</header>
 {% endblock %} {% block main %}
 <section id="whois">
   <ul>
