--- a/static/styles.css
+++ b/static/styles.css
@@ -21,7 +21,7 @@ footer {
 }
 
 nav {
-  background-color: #f9f9f9;
+  background-color: #f9f9f9ee;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
