--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       <span>{{ country }}, {{ province }}, {{ city }}</span>
     </li>
     <li onclick="location.href='./whois';">
-      <span>查看 whois 信息</span>
+      <span>查看 Whois 信息</span>
       <span>&gt;</span>
     </li>
   </ul>
@@ -44,7 +44,7 @@
       <span id="address">未知</span>
     </li>
     <li onclick="location.href='./navigator';">
-      <span>查看 navigator 信息</span>
+      <span>查看 Navigator 信息</span>
       <span>&gt;</span>
     </li>
   </ul>
@@ -66,58 +66,15 @@
       <span>{{ device }}</span>
     </li>
     <li onclick="location.href='./headers';">
-      <span>查看 headers 信息</span>
+      <span>查看 Headers 信息</span>
       <span>&gt;</span>
     </li>
   </ul>
   <p>用户代理: {{ user_agent }}</p>
 </section>
 <section>
-  <h1>区域设置</h1>
+  <h1>其它信息</h1>
   <ul>
-    <li>
-      <span>语言</span>
-      <span id="user_language">未知</span>
-    </li>
-    <li>
-      <span>时区</span>
-      <span id="user_timezone">未知</span>
-    </li>
-    <li>
-      <span>时间</span>
-      <span id="user_time"></span>
-    </li>
-  </ul>
-</section>
-<section>
-  <h1>性能</h1>
-  <ul>
-    <li>
-      <span>CPU</span>
-      <span id="cpu">未知</span>
-    </li>
-    <li>
-      <span>内存</span>
-      <span id="memory">未知</span>
-    </li>
-    <li>
-      <span>显卡</span>
-      <span id="gpu">未知</span>
-    </li>
-    <li>
-      <span>刷新率</span>
-      <span id="fps">0</span>
-    </li>
-  </ul>
-  <p>刷新率为计算所得，可能不准确</p>
-</section>
-<section>
-  <h1>屏幕</h1>
-  <ul>
-    <li>
-      <span>逻辑分辨率</span>
-      <span id="logicResolution">未知</span>
-    </li>
     <li>
       <span>物理分辨率</span>
       <span id="resolution">1</span>
@@ -127,47 +84,15 @@
       <span id="colorDepth">未知</span>
     </li>
     <li>
-      <span>触屏</span>
-      <span id="touchscreen">未知</span>
+      <span>显卡</span>
+      <span id="gpu">未知</span>
+    </li>
+    <li onclick="location.href='./more';">
+      <span>查看更多信息</span>
+      <span>&gt;</span>
     </li>
   </ul>
-  <p>物理分辨率为计算所得，可能不准确</p>
 </section>
-<!-- <section>
-  <h1>输入输出设备</h1>
-  <ul>
-    <li>
-      <span>摄像头</span>
-      <span id="webcams">未知</span>
-    </li>
-    <li>
-      <span>麦克风</span>
-      <span id="micros">未知</span>
-    </li>
-    <li>
-      <span>扬声器</span>
-      <span id="speakers">未知</span>
-    </li>
-  </ul>
-</section> -->
-<!-- <section>
-  <h1>反爬特征</h1>
-  <ul>
-    <li>
-      <span>webdriver</span>
-      <span id="webdriver">未知</span>
-    </li>
-    <li>
-      <span>chrome</span>
-      <span id="chrome">未知</span>
-    </li>
-    <li>
-      <span>插件数量</span>
-      <span id="plugins">未知</span>
-    </li>
-  </ul>
-  <p>点击<a href="./navigator">此处</a>，查看更多信息</p>
-</section> -->
 <section>
   <h1>捐赠项目</h1>
   <ul>
