--- a/templates/navigator.html
+++ b/templates/navigator.html
@@ -2,7 +2,7 @@
 <script src="{% static 'navigator.js' %}" defer></script>
 {% endblock %} {% block nav %}
 <div><a href="../">&lt; 后退</a></div>
-<header>查看 navigator 信息</header>
+<header>Navigator 信息</header>
 {% endblock %}{% block main %}
 <section id="navigator"></section>
 <p>
