--- a/templates/base.html
+++ b/templates/base.html
@@ -61,20 +61,6 @@
   <body>
     <nav>{% block nav %}{% endblock %}</nav>
     <main>{% block main %}{% endblock %}</main>
-    <footer>
-      <p>
-        <a href="https://gitee.com/songyustudio/ip/blob/master/README.md"
-          >API 文档</a
-        >
-      </p>
-      <p>
-        <a href="https://gitee.com/songyustudio/ip">码云</a> |
-        <a href="https://github.com/jackjyq/ip">Github</a>
-      </p>
-      <p>
-        MIT License © 2022
-        <a href="https://www.jackjyq.com">松鱼工作室</a>
-      </p>
-    </footer>
+    <footer>{% block footer %}{% endblock %}</footer>
   </body>
 </html>
