feat: add google adsense

--- a/templates/index.html
+++ b/templates/index.html
@@ -94,15 +94,28 @@
   </ul>
 </section>
 <section>
-  <h1>捐赠项目</h1>
+  <h1>赞助项目</h1>
   <ul>
     <li>
-      <a href="{% static 'donate/微信-667x667.png' %}"><span>微信</span></a>
-    </li>
-    <li>
-      <a href="{% static 'donate/支付宝-667x667.png' %}"><span>支付宝</span></a>
+      <ins
+        class="adsbygoogle"
+        style="display: block; text-align: center"
+        data-ad-layout="in-article"
+        data-ad-format="fluid"
+        data-ad-client="ca-pub-4089826532740408"
+        data-ad-slot="3215047669"
+      ></ins>
+      <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
     </li>
   </ul>
+  <p>
+    赞助途径：可通过<a href="{% static 'donate/微信-667x667.png' %}"> 微信 </a
+    >、
+    <a href="{% static 'donate/支付宝-667x667.png' %}"> 支付宝 </a
+    >捐赠，或点击广告
+  </p>
 </section>
 {% endblock %}{% block footer %}
 <p>
