--- a/templates/index.html
+++ b/templates/index.html
@@ -97,6 +97,11 @@
   <h1>赞助项目</h1>
   <ul>
     <li>
+      <script
+        async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4089826532740408"
+        crossorigin="anonymous"
+      ></script>
       <ins
         class="adsbygoogle"
         style="display: block; text-align: center"
@@ -111,8 +116,7 @@
     </li>
   </ul>
   <p>
-    赞助途径：可通过<a href="{% static 'donate/微信-667x667.png' %}"> 微信 </a
-    >、
+    赞助途径：<a href="{% static 'donate/微信-667x667.png' %}"> 微信 </a>、
     <a href="{% static 'donate/支付宝-667x667.png' %}"> 支付宝 </a
     >捐赠，或点击广告
   </p>
