fix: fix ad width

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,6 +57,11 @@
 
       gtag("config", "G-YXC7ESZ82P");
     </script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4089826532740408"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav>{% block nav %}{% endblock %}</nav>
