--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 <script src="{% static 'index.js' %}" defer></script>
 {% endblock %} {% block nav %}
 <header>考拉 IP 归属地</header>
+<div class="right"><a href="./query">查询</a></div>
 {% endblock %} {% block main %}
 <section>
   <h1>IP 归属地</h1>
