--- a/templates/more.html
+++ b/templates/more.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% load static %} {% block scripts %}
 <script src="{% static 'more.js' %}" defer></script>
 {% endblock %}{%block nav %}
-<div><a href="../">&lt; 后退</a></div>
+<div class="left"><a href="../">&lt; 后退</a></div>
 <header>更多信息</header>
 {% endblock %} {% block main %}
 <section>
