--- a/templates/navigator.html
+++ b/templates/navigator.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% load static %} {% block scripts %}
 <script src="{% static 'navigator.js' %}" defer></script>
 {% endblock %} {% block nav %}
-<div><a href="../">&lt; 后退</a></div>
+<div class="left"><a href="../">&lt; 后退</a></div>
 <header>Navigator 信息</header>
 {% endblock %}{% block main %}
 <section id="navigator"></section>
