--- a/templates/whois.html
+++ b/templates/whois.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% load static %} {%block nav %}
-<div><a href="../">&lt; 后退</a></div>
+<div class="left"><a href="../">&lt; 后退</a></div>
 <header>Whois 信息</header>
 {% endblock %} {% block main %}
 <section id="whois">
