--- a/templates/query.html
+++ b/templates/query.html
@@ -2,27 +2,30 @@
 <div class="left"><a href="../">&lt; 后退</a></div>
 <header>查询 IP 信息</header>
 {% endblock %} {% block main %}
-<form action="./query" method="GET">
-  <!-- https://stackoverflow.com/a/54796814
-  match IPv4
-  -->
-  <input
-    type="text"
-    name="ip"
-    minlength="7"
-    maxlength="15"
-    size="15"
-    pattern="^((\d{1,2}|1\d\d|2[0-4]\d|25[0-5])\.){3}(\d{1,2}|1\d\d|2[0-4]\d|25[0-5])$"
-  />
-  <input type="submit" />
-</form>
+
 <section>
-  <h1>IP 归属地</h1>
+    <form action="./query" method="GET">
+      <!-- https://stackoverflow.com/a/54796814
+          match IPv4
+          -->
+      <label for="ip">IP 地址</label>
+      <input
+        type="text"
+        name="ip"
+        minlength="7"
+        maxlength="15"
+        size="15"
+        placeholder="请输入 IP 地址"
+        pattern="^((\d{1,2}|1\d\d|2[0-4]\d|25[0-5])\.){3}(\d{1,2}|1\d\d|2[0-4]\d|25[0-5])$"
+        autofocus
+      />
+      <input type="submit" hidden />
+  </ul>
+</section>
+
+<section>
+  <h1>归属地</h1>
   <ul>
-    <li>
-      <span>IP 地址</span>
-      <span>{{ ip }}</span>
-    </li>
     <li>
       <span>网络提供商</span>
       <span>{{ isp }}</span>
