--- a/static/styles.css
+++ b/static/styles.css
@@ -70,17 +70,15 @@ form {
   padding-left: 12px;
 }
 
-li {
-  padding: 16px 12px 16px 0;
+li,
+form {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  padding-right: 12px;
   display: flex;
   justify-content: space-between;
   column-gap: 12px;
   word-break: break-all;
-}
-
-input[type="text"] {
-  all: unset;
-  padding: 16px 0;
 }
 
 li[onClick] {
@@ -95,13 +93,17 @@ li > span:nth-child(1) {
   min-width: calc(16px * 5);
 }
 
-label {
-  display: inline-block;
-  width: calc(16px * 5);
-}
-
 li > span:nth-child(2) {
   color: #0000008a;
+}
+
+label {
+  min-width: calc(16px * 5);
+}
+
+input[type="text"] {
+  all: unset;
+  width: 100%;
 }
 
 footer {
