--- a/templates/query.html
+++ b/templates/query.html
@@ -39,17 +39,29 @@
     <a href="{{ database_href }}">{{ database_name }}</a>
   </p>
 </section>
-<section id="whois">
-  <h1>Whois 信息</h1>
+<section>
+  <h1>更多域名信息</h1>
   <ul>
-    {% for line in whois %}
+    {% for line in whois_host %}
     <li>
       <span> {{ line.0 }} </span>
       <span> {{ line.1 }} </span>
     </li>
-
     {% endfor %}
   </ul>
+  <p>信息来源: whois {{ host }}</p>
+</section>
+<section>
+  <h1>更多主机信息</h1>
+  <ul>
+    {% for line in whois_ip %}
+    <li>
+      <span> {{ line.0 }} </span>
+      <span> {{ line.1 }} </span>
+    </li>
+    {% endfor %}
+  </ul>
+  <p>信息来源: whois {{ ip }}</p>
 </section>
 {% endblock %} {% block footer %}
 <p>
