remove whois section for host

--- a/templates/query.html
+++ b/templates/query.html
@@ -39,7 +39,7 @@
     <a href="{{ database_href }}">{{ database_name }}</a>
   </p>
 </section>
-<section>
+<!-- <section>
   <h1>更多域名信息</h1>
   <ul>
     {% for line in whois_host %}
@@ -51,7 +51,7 @@
   </ul>
   <p>信息来源: whois {{ host }}</p>
 </section>
-<section>
+<section> -->
   <h1>更多主机信息</h1>
   <ul>
     {% for line in whois_ip %}
