--- a/templates/query.html
+++ b/templates/query.html
@@ -33,6 +33,10 @@
       <span>归属地</span>
       <span>{{ country }}, {{ province }}, {{ city }}</span>
     </li>
+    <li>
+      <span>主机名</span>
+      <span>{{ host }}</span>
+    </li>
   </ul>
   <p>
     IP 归属地数据源:
