--- a/templates/query.html
+++ b/templates/query.html
@@ -8,7 +8,7 @@
       <label for="url">IP 或网址</label>
       <!-- the max lenght of host name is 253 -->
       <input
-        type="text"
+        type="url"
         name="url"
         maxlength=253
         placeholder="请输入 IP 或网址"
