--- a/templates/index.html
+++ b/templates/index.html
@@ -93,27 +93,7 @@
       <span>&gt;</span>
     </li>
   </ul>
-</section>
-<section>
-  <h1>赞助项目</h1>
-  <ul>
-    <ins
-      class="adsbygoogle"
-      style="display: block; text-align: center"
-      data-ad-layout="in-article"
-      data-ad-format="fluid"
-      data-ad-client="ca-pub-4089826532740408"
-      data-ad-slot="3215047669"
-    ></ins>
-    <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </ul>
-  <p>
-    赞助途径：<a href="{% static 'donate/微信-667x667.png' %}"> 微信 </a>、
-    <a href="{% static 'donate/支付宝-667x667.png' %}"> 支付宝 </a
-    >捐赠，或点击广告
-  </p>
+  <p>这些信息从浏览器获取，与系统配置不一定相同</p>
 </section>
 {% endblock %}{% block footer %}
 <p>
