--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,30 @@
   </head>
   <body>
     <nav>{% block nav %}{% endblock %}</nav>
-    <main>{% block main %}{% endblock %}</main>
+    <main>
+      {% block main %}{% endblock %}
+      <section>
+        <h1>赞助项目</h1>
+        <ul>
+          <ins
+            class="adsbygoogle"
+            style="display: block; text-align: center"
+            data-ad-layout="in-article"
+            data-ad-format="fluid"
+            data-ad-client="ca-pub-4089826532740408"
+            data-ad-slot="3215047669"
+          ></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        </ul>
+        <p>
+          捐赠：可通过
+          <a href="{% static 'donate/微信-667x667.png' %}"> 微信 </a>、
+          <a href="{% static 'donate/支付宝-667x667.png' %}"> 支付宝 </a>打赏
+        </p>
+      </section>
+    </main>
     <footer>{% block footer %}{% endblock %}</footer>
   </body>
 </html>
