--- a/templates/base.html
+++ b/templates/base.html
@@ -89,6 +89,17 @@
         </p>
       </section>
     </main>
-    <footer>{% block footer %}{% endblock %}</footer>
+    <footer>
+      <p>本站提供 API</p>
+      <p>
+        <a href="https://gitee.com/songyustudio/ip">码云</a> |
+        <a href="https://github.com/jackjyq/ip">Github</a>
+      </p>
+      <p>
+        MIT License © 2022
+        <a href="https://www.jackjyq.com">松鱼工作室</a>
+      </p>
+      {% block footer %}{% endblock %}
+    </footer>
   </body>
 </html>
