Update footer links and copyright information

--- a/templates/base.html
+++ b/templates/base.html
@@ -90,14 +90,14 @@
       </section>
     </main>
     <footer>
-      <p>本站提供 API</p>
+      <p><a href="https://github.com/jackjyq/ip#api">API 文档</a></p>
       <p>
-        <a href="https://gitee.com/songyustudio/ip">码云</a> |
-        <a href="https://github.com/jackjyq/ip">Github</a>
-      </p>
-      <p>
-        MIT License © 2022
-        <a href="https://www.jackjyq.com">松鱼工作室</a>
+        版权所有 &copy; 2022-2023
+        <a href="https://jackjyq.com/">jackjyq.com</a>. 基于
+        <a href="https://github.com/jackjyq/ip/blob/master/LICENSE"
+          >MIT 开源协议</a
+        >
+        发布在 <a href="https://github.com/jackjyq/ip">Github</a>.
       </p>
       {% block footer %}{% endblock %}
     </footer>
