--- a/templates/base.html
+++ b/templates/base.html
@@ -90,7 +90,12 @@
       </section>
     </main>
     <footer>
-      <p><a href="https://github.com/jackjyq/ip#api">API 文档</a></p>
+      <p>
+        <a
+          href="https://github.com/jackjyq/ip?tab=readme-ov-file#api-%E6%96%87%E6%A1%A3"
+          >API 文档</a
+        >
+      </p>
       <p>
         版权所有 &copy; 2022-2023
         <a href="https://jackjyq.com/">jackjyq.com</a>. 基于
